Changes to description

--- a/Employee_salary.ipynb
+++ b/Employee_salary.ipynb
@@ -187,32 +187,27 @@
         "| `Salary`          | Integer     | Annual salary in USD — target variable for regression     \n",
         "\n",
         "✅ Characteristics\n",
-        "No missing values; all entries are complete.\n",
-        "\n",
-        "Realistic correlations:\n",
-        "\n",
-        "Higher education → Higher job levels → Higher salaries\n",
-        "\n",
-        "Interns are younger with lower salaries\n",
-        "\n",
-        "PhDs tend to be older and occupy senior roles\n",
-        "\n",
-        "Salary varies significantly by department and location\n",
+        "- ✅ No missing values — all entries are complete  \n",
+        "- 📈 Realistic correlations, such as:\n",
+        "  - 🎓 Higher education → 💼 Higher job levels → 💰 Higher salaries  \n",
+        "  - 🧑‍🎓 Interns are younger and earn less  \n",
+        "  - 🧠 PhDs tend to be older and hold senior roles  \n",
+        "  - 🌍 Salary varies across departments and locations\n",
         "\n",
         "🎯 Applications\n",
-        "This dataset is suitable for:\n",
+        "- This dataset is well-suited for:\n",
         "\n",
-        "Linear and nonlinear regression models (e.g., XGBoost, LinearRegression, RandomForest)\n",
+        "- 🔢 Regression modeling (Linear, XGBoost, Random Forest, etc.)\n",
         "\n",
-        "Feature engineering and selection\n",
+        "- 🛠️ Feature engineering and selection\n",
         "\n",
-        "Handling categorical variables (encoding techniques)\n",
+        "- 🧠 Categorical variable encoding (one-hot, label encoding, etc.)\n",
         "\n",
-        "Hyperparameter optimization\n",
+        "- 🔍 Hyperparameter tuning\n",
         "\n",
-        "Bias and fairness analysis (e.g., gender wage gap)\n",
+        "- ⚖️ Bias & fairness analysis (e.g., gender pay gap)\n",
         "\n",
-        "Exploratory Data Analysis (EDA) and visualization\n",
+        "- 📊 Exploratory Data Analysis (EDA) and visualization\n",
         "\n"
       ],
       "metadata": {
@@ -1943,6 +1938,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#New Data Entery"
+      ],
+      "metadata": {
+        "id": "PgaL7y5ZomSq"
+      }
     },
     {
       "cell_type": "code",
