Text cell changed

--- a/Employee_salary.ipynb
+++ b/Employee_salary.ipynb
@@ -187,7 +187,7 @@
         "| `Department`      | Categorical | Business unit (e.g., HR, Engineering, Marketing, etc.)                      |\n",
         "| `Job_Title`       | Categorical | Role of the employee (e.g., Analyst, Engineer, Manager, etc.)              |\n",
         "| `Location`        | Categorical | Work location (e.g., New York, San Francisco, etc.)                         |\n",
-        "| `Salary`          | Integer     | Annual salary in USD — target variable for regression     \n",
+        "| `Salary`          | Integer     | Annual salary in USD — target variable for regression     |\n",
         "\n",
         "✅ Characteristics\n",
         "- ✅ No missing values — all entries are complete  \n",
