--- a/Employee_salary.ipynb
+++ b/Employee_salary.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "GuGe4x9iatzr"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         },
         "outputId": "4a09af1e-a683-4911-df0a-a67cc8cd1cb0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "C57cXdRDaymd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
         },
         "outputId": "3dbd0ade-a036-41c1-be70-587d629dcca9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +585,7 @@
         },
         "outputId": "86df74d2-d6bd-4fa6-b568-b9baea5fc8e1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
         },
         "outputId": "2c1d8e86-f6a1-40ab-8c1c-7b3697d29c09"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,6 +743,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**📊 Age Distribution Analysis**\n",
+        "\n",
+        "The age distribution of employees is skewed toward younger individuals, with the highest concentration between the ages of 23 and 30. Notably:\n",
+        "\n",
+        "- 📈 Ages 24–26 and 30 have the highest counts, each with over 500 employees.\n",
+        "\n",
+        "- 👥 The majority of employees fall between 23 and 40 years old.\n",
+        "\n",
+        "- 📉 After age 40, the distribution gradually declines, with significantly fewer employees over 50.\n",
+        "\n",
+        "- 🧓 Employees aged 55 and above represent a small portion of the dataset."
+      ],
+      "metadata": {
+        "id": "mm1hVyrhpRic"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "fig = px.histogram(df, x='Salary', nbins=20, title='Salary Distribution',\n",
@@ -769,7 +788,7 @@
         },
         "outputId": "633af78b-ad39-4f56-9f93-5f3ba7bb3104"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,6 +832,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**💰 Salary Distribution Analysis**\n",
+        "\n",
+        "The histogram reveals a right-skewed distribution of salaries, indicating most employees earn on the lower to middle end of the salary spectrum.\n",
+        "\n",
+        "Key Observations:\n",
+        "- 🏆 The most common salary range is $ 70,000 - 80,000, with the highest frequency (over 1,400 records).\n",
+        "\n",
+        "- 📊 A large number of employees also earn between $ 60,000 - 90,000.\n",
+        "\n",
+        "- 💼 Salaries above $150,000 are less frequent but still present in notable amounts.\n",
+        "\n",
+        "- 📉 Very high and very low salaries are rare\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1wGjYHqLpgGV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "education_counts = df.groupby(['Department', 'Education_Level']).size().reset_index(name='Count')\n",
@@ -849,7 +889,7 @@
         },
         "outputId": "dc11b098-b271-4ecd-8e5f-141f8bd78fe5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,6 +933,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**🎓 Education Level by Department**\n",
+        "\n",
+        "This stacked bar chart displays the distribution of education levels (Bachelor, Master, PhD) across various departments.\n",
+        "\n",
+        "Key Insights:\n",
+        "- 👨‍💻 Engineering has the highest number of employees with Bachelor's degrees, indicating a strong foundation in undergraduate education for technical roles.\n",
+        "\n",
+        "- 🧮 Finance, HR, and Product departments have a higher proportion of employees with Master’s degrees, reflecting the need for specialized knowledge in these fields.\n",
+        "\n",
+        "- 📈 PhD holders are relatively evenly distributed, but HR and Product show a slightly higher presence of doctorate-level employees.\n",
+        "\n",
+        "- 📊 In all departments, the Master's degree is the most common education level, followed by Bachelor, then PhD."
+      ],
+      "metadata": {
+        "id": "NY_0dexEqTZa"
+      }
+    },
+    {
       "source": [
         "job_counts = df['Job_Title'].value_counts().reset_index()\n",
         "job_counts.columns = ['Job_Title', 'Count']\n",
@@ -919,7 +979,7 @@
         "fig.show()"
       ],
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -962,13 +1022,34 @@
         }
       ],
       "metadata": {
-        "collapsed": true,
         "id": "vzIpV4TOcNJ5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
         },
         "outputId": "88682aa0-8e07-415e-9a0a-1edf12448008"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**💼 Number of Employees per Job Title**\n",
+        "\n",
+        "This bar chart presents the distribution of employees across different job titles.\n",
+        "\n",
+        "Key Insights:\n",
+        "- 👔 Managers form the largest group in the dataset, with over 3,000 employees. This suggests that many roles may have managerial responsibilities or titles.\n",
+        "\n",
+        "- 📊 Analysts are the second most common, showing the importance of data and business analysis across departments.\n",
+        "\n",
+        "- 🧑‍💼 Executives follow, representing a significant portion of leadership or senior decision-making roles.\n",
+        "\n",
+        "- 🛠️ Engineers are fewer in number compared to managerial and analytical roles, despite being essential to technical departments.\n",
+        "\n",
+        "- 🎓 Interns are the least represented, indicating either a limited internship program or a focus on full-time positions."
+      ],
+      "metadata": {
+        "id": "UKogoNj3qSXy"
       }
     },
     {
@@ -979,7 +1060,7 @@
       "metadata": {
         "id": "QDffxxXsYBvM"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +1071,7 @@
       "metadata": {
         "id": "mevvktaWZYon"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1006,7 +1087,7 @@
         },
         "outputId": "5c4d3a03-61e9-46f4-9c3a-0e3f5bd756cb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1467,7 +1548,7 @@
       "metadata": {
         "id": "B93T1KT4hM-b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1501,7 +1582,7 @@
       "metadata": {
         "id": "vMiVE5GrhNKw"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1524,7 +1605,7 @@
         },
         "outputId": "dcda0725-86d6-40e2-fd1b-5f07b001b559"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1673,7 @@
         },
         "outputId": "08e48248-b125-48a4-c3ef-72fb58265604"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
